<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreen">

    <Button
        android:id="@+id/buttonContinueRegister"
        android:layout_width="257dp"
        android:layout_height="58dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="125dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/bttncont"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNameRegister"
        android:layout_width="286dp"
        android:layout_height="49dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="287dp"
        android:layout_height="49dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameRegister" />

    <EditText
        android:id="@+id/editTextNumberRegister"
        android:layout_width="284dp"
        android:layout_height="55dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberRegister" />

    <RadioButton
        android:id="@+id/radioButtonAcept"
        android:layout_width="236dp"
        android:layout_height="70dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="88dp"
        android:text="@string/btnacep"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

</android.support.constraint.ConstraintLayout>