<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="290dp"
        android:layout_height="69dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/welcome"
        android:textColor="#17202A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCheckIn"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="123dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/sesion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="51dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/ingemail"
        android:inputType="text|textEmailAddress"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCheckIn" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="51dp"
        android:ems="10"
        android:hint="@string/ingcontraseña"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="248dp"
        android:layout_height="58dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="188dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/bttncont"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewRegist"
        android:layout_width="139dp"
        android:layout_height="30dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="170dp"
        android:text="@string/link"
        android:textColor="#2E86C1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContinue" />

    <TextView
        android:id="@+id/textViewAppost"
        android:layout_width="3dp"
        android:layout_height="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/app"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintStart_toStartOf="@+id/textViewCheckIn" />

</android.support.constraint.ConstraintLayout>