<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SatisfactoryPayment">

    <TextView
        android:id="@+id/textViewSatisfactory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="69dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/pago"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewSatisfactory"
        android:layout_width="312dp"
        android:layout_height="334dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/iconsatisfactorypayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSatisfactory" />

    <TextView
        android:id="@+id/textViewTaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/taxi"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSatisfactory" />

    <TextView
        android:id="@+id/textViewPacient"
        android:layout_width="325dp"
        android:layout_height="58dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="43dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/paciente"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaxi" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/tiempo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPacient" />
</android.support.constraint.ConstraintLayout>