<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textViewConfirm"
        android:layout_width="222dp"
        android:layout_height="36dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="65dp"
        android:text="@string/confirmar"
        android:textColor="#2E86C1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCall" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="73dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/btnbuscar"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="73dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/btnllamar"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearch" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="319dp"
        android:layout_height="317dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"
        android:src="@drawable/menulogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="69dp"
        android:layout_height="82dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/rightarrow"
        app:layout_constraintEnd_toStartOf="@+id/buttonCall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="69dp"
        android:layout_height="82dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/rightarrow"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</android.support.constraint.ConstraintLayout>